--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0-beta1",
     "react": "^17.0.2",
+    "react-data-table-component": "^7.5.2",
     "react-dom": "^17.0.2",
     "react-image-video-gallery": "^0.8.18",
     "react-images": "^1.2.0-beta.7",
