save photo gallery

--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@testing-library/user-event": "^12.5.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0-beta1",
+    "fscreen": "^1.2.0",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.0.0",
     "react-data-table-component": "^7.5.2",
     "react-dom": "^17.0.2",
+    "react-full-screen": "^1.1.1",
     "react-image-picker-v2": "^1.1.4",
     "react-image-video-gallery": "^0.8.18",
     "react-images": "^1.2.0-beta.7",
